--- a/catalog-manifest.json
+++ b/catalog-manifest.json
@@ -5,77 +5,99 @@
       "name": "Tech Minimal",
       "category": "Technology",
       "style": "Minimal",
-      "path": "catalog/template_001_tech_minimal"
+      "path": "catalog/template_001_tech_minimal",
+      "description": "Minimal tech focus with blue accents and Inter font.",
+      "tags": ["Modern", "Blue", "Clean"]
     },
     {
       "id": "002",
       "name": "Cozy Retro Cafe",
       "category": "Cafe",
       "style": "Retro",
-      "path": "catalog/template_002_cafe_retro"
+      "path": "catalog/template_002_cafe_retro",
+      "description": "Warm cream/brown tones, Playfair Display font, focus on atmosphere.",
+      "tags": ["Warm", "Elegant", "Serif"]
     },
     {
       "id": "003",
       "name": "Retro Cafe",
       "category": "Food & Beverage",
       "style": "Retro",
-      "path": "catalog/template_003_retro_cafe"
+      "path": "catalog/template_003_retro_cafe",
+      "description": "Vintage nostalgia with radial background and Merriweather font.",
+      "tags": ["Vintage", "Classic", "Serif"]
     },
     {
       "id": "004",
       "name": "Medical Trust",
       "category": "Medical",
       "style": "Clean",
-      "path": "catalog/template_004_medical_clean"
+      "path": "catalog/template_004_medical_clean",
+      "description": "Clean medical professional look with blue/white scheme and Noto Sans JP.",
+      "tags": ["Professional", "Blue", "JP Support"]
     },
     {
       "id": "005",
       "name": "Nostalgic Brew",
       "category": "Cafe",
       "style": "Retro",
-      "path": "catalog/template_005_nostalgic_brew"
+      "path": "catalog/template_005_nostalgic_brew",
+      "description": "Classic coffee aesthetic with sepia tones and Playfair Display font.",
+      "tags": ["Sepia", "Nostalgic", "Serif"]
     },
     {
       "id": "006",
       "name": "Beauty Salon Elegant",
       "category": "Beauty",
       "style": "Elegant",
-      "path": "catalog/template_006_beauty_elegant"
+      "path": "catalog/template_006_beauty_elegant",
+      "description": "Elegant beauty salon theme with soft pink/gold tones and serif fonts.",
+      "tags": ["Luxury", "Soft", "Serif"]
     },
     {
       "id": "007",
       "name": "Cafe Retro",
       "category": "Cafe",
       "style": "Retro",
-      "path": "catalog/template_007_cafe_retro"
+      "path": "catalog/template_007_cafe_retro",
+      "description": "Friendly retro vibe with Pacifico script font and amber highlights.",
+      "tags": ["Friendly", "Script", "Amber"]
     },
     {
       "id": "008",
       "name": "Cafe Retro",
       "category": "Cafe",
       "style": "Retro",
-      "path": "catalog/template_008_cafe_retro"
+      "path": "catalog/template_008_cafe_retro",
+      "description": "Traditional roast aesthetic with aged paper textures and dark amber tones.",
+      "tags": ["Traditional", "Textured", "Dark"]
     },
     {
       "id": "009",
       "name": "Retro Cafe",
       "category": "Food & Beverage",
       "style": "Retro",
-      "path": "catalog/template_009_retro_cafe"
+      "path": "catalog/template_009_retro_cafe",
+      "description": "Modern-retro fusion with clean lines, orange accents, and Japanese text support.",
+      "tags": ["Fusion", "Orange", "JP Support"]
     },
     {
       "id": "010",
       "name": "Cafe Retro",
       "category": "Cafe",
       "style": "Retro",
-      "path": "catalog/template_010_cafe_retro"
+      "path": "catalog/template_010_cafe_retro",
+      "description": "Premium cafe feel with large photography, dark gradients, and gold buttons.",
+      "tags": ["Premium", "Photo-rich", "Gold"]
     },
     {
       "id": "011",
       "name": "Cafe Retro",
       "category": "Food & Beverage",
       "style": "Retro",
-      "path": "catalog/template_011_cafe_retro"
+      "path": "catalog/template_011_cafe_retro",
+      "description": "Artisanal coffee focus with unique border frames and warm peach/orange tones.",
+      "tags": ["Artisanal", "Unique", "Warm"]
     }
   ]
 }
