Add Japanese version for template_001 with bilingual support
- Add index_ja.html with Noto Sans JP font and natural Japanese text
- Keep English elements (Services, About, Works, Contact) for stylish design
- Add language switcher in navigation (EN/JP)
- Add mobile responsive menu with language toggle
- Update catalog-manifest.json with languages field
- Update index.html gallery to show language buttons for bilingual templates
- Temporarily disable auto-merge workflow

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,8 +1,12 @@
 name: Auto Merge Jules PRs
 
+# 一時停止中
+# on:
+#   pull_request:
+#     types: [opened, synchronize]
+
 on:
-  pull_request:
-    types: [opened, synchronize]
+  workflow_dispatch:
 
 jobs:
   auto-merge:
