--- a/catalog-manifest.json
+++ b/catalog-manifest.json
@@ -11,7 +11,8 @@
         "Modern",
         "Blue",
         "Clean"
-      ]
+      ],
+      "languages": ["en", "ja"]
     },
     {
       "id": "002",
