Add Japanese version for template_002 (Cozy Retro Cafe)
- Add index_ja.html with Noto Serif/Sans JP fonts
- Keep English menu items (About, Menu, Access) for stylish retro vibe
- Add language switcher (EN/JP) in navigation
- Add mobile responsive menu with language toggle
- Update catalog-manifest.json with languages field
- Convert prices to yen (¥) for Japanese market
- Translate content while maintaining retro atmosphere

--- a/catalog-manifest.json
+++ b/catalog-manifest.json
@@ -25,7 +25,8 @@
         "Warm",
         "Elegant",
         "Serif"
-      ]
+      ],
+      "languages": ["en", "ja"]
     },
     {
       "id": "003",
