Add Japanese version for template_003 (Retro Cafe)
- Add index_ja.html with Noto Serif/Sans JP fonts
- Keep English menu items (About, Menu, Location, Reserve) for vintage vibe
- Add language switcher (EN/JP) in navigation
- Add mobile responsive menu with language toggle
- Update catalog-manifest.json with languages field
- Convert prices to yen (¥) for Japanese market
- Translate content with nostalgic Japanese expressions
- Japanese address and contact format

--- a/catalog-manifest.json
+++ b/catalog-manifest.json
@@ -39,7 +39,8 @@
         "Vintage",
         "Classic",
         "Serif"
-      ]
+      ],
+      "languages": ["en", "ja"]
     },
     {
       "id": "004",
