Add bilingual support for template_004 (Medical Trust)
- Create English version (index.html) with Inter font
- Rename existing Japanese version to index_ja.html
- Add language switcher (EN/JP) in navigation for both versions
- Add mobile responsive menu with language toggle
- Update catalog-manifest.json with languages field
- Japanese version uses Noto Sans JP font
- English version uses Inter font for clean medical look
- Both versions maintain professional medical aesthetic

--- a/catalog-manifest.json
+++ b/catalog-manifest.json
@@ -59,7 +59,8 @@
         "Professional",
         "Blue",
         "JP Support"
-      ]
+      ],
+      "languages": ["en", "ja"]
     },
     {
       "id": "005",
